# pb-spec

./: .gitignore  .rumdl.toml  AGENTS.md  Justfile  LICENSE  README.md  cliff.toml  context7.json  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: contract.md  design.md  platform-implementation-status.md  tasks.md
docs/plans/: 2026-03-06-bdd-tdd-gherkin-design.md  2026-03-06-bdd-tdd-gherkin-workflow.md  2026-03-19-specifica-inspired-evolution.md  2026-03-19-validate-command-plan.md
features/: environment.py  lightweight_tasks_compatibility.feature  validate.feature  workflow_type_contracts.feature
features/steps/: __init__.py  template_steps.py  validate_steps.py
skills/pb-brainstorming/: SKILL.md
skills/pb-branch-finalization/: SKILL.md
skills/pb-build/: SKILL.md
skills/pb-build/references/: evaluator_prompt.md  implementer_prompt.md
skills/pb-code-review/: SKILL.md
skills/pb-dispatching-parallel-agents/: SKILL.md
skills/pb-finishing-a-development-branch/: SKILL.md
skills/pb-improve/: SKILL.md
skills/pb-improve/references/: audit-playbook.md  closing-the-loop.md  plan-template.md
skills/pb-init/: SKILL.md
skills/pb-merge-conflicts/: SKILL.md
skills/pb-plan/: SKILL.md
skills/pb-plan/references/: design_template.md  tasks_template.md
skills/pb-prototype/: SKILL.md
skills/pb-receiving-code-review/: SKILL.md
skills/pb-refine/: SKILL.md
skills/pb-requesting-code-review/: SKILL.md
skills/pb-subagent-driven-development/: SKILL.md  implementer-prompt.md  task-reviewer-prompt.md
skills/pb-subagent-driven-development/scripts/: review-package  sdd-workspace  task-brief
skills/pb-systematic-debugging/: SKILL.md
skills/pb-test-driven-development/: SKILL.md
skills/pb-verification-before-completion/: SKILL.md
skills/pb-writing-skills/: SKILL.md
skills/using-pb-spec/: SKILL.md
specs/2026-03-09-01-workflow-type-contracts/: design.md  tasks.md
specs/2026-06-22-01-integrate-ponytail/: design.md  tasks.md
specs/2026-06-22-01-integrate-ponytail/features/: integrate-ponytail.feature
specs/2026-07-08-01-kiro-inspired-improvements/: design.md  progress.md  tasks.md
specs/2026-07-08-01-kiro-inspired-improvements/features/: kiro-improvements.feature
src/pb/: __init__.py  cli.py
src/pb/commands/: init.py  update.py  version.py
src/pb/templates/: __init__.py
src/pb_spec/: __init__.py  cli.py  config.py  exceptions.py  git_utils.py  output.py  spec_resolver.py  versioning.py
src/pb_spec/commands/: __init__.py  discovery.py  init.py  report.py  task_status.py  update.py  validate.py  version.py
src/pb_spec/templates/: __init__.py
src/pb_spec/templates/prompts/: pb-build.prompt.md  pb-init.prompt.md  (+2 more)
src/pb_spec/validation/: __init__.py  build.py  contract_sections.toml  design.py  features.py  io.py  packets.py  parser.py  parsers.py  patterns.py  plan.py  result.py  rumdl.py  runner.py  scanner.py  tasks.py  types.py
tests/: __init__.py  test_cli.py  test_e2e.py  test_features_edge_cases.py  test_init.py  test_integration.py  test_platforms.py  test_scanner.py  test_template_contracts.py  test_templates.py  test_validate.py
(+20 files in other folders)
